# budgie-desktop

debian/: budgie-core.postinst  changelog  control  rules
debian/patches/: 318
src/applets/quicknote/: QuickNoteApplet.plugin.in  QuickNoteApplet.vala  com.solus-project.quicknote.gschema.xml  meson.build
src/wm/: background.vala
